--- a/client/game/game.html
+++ b/client/game/game.html
@@ -1,8 +1,8 @@
 <template name="game">
   <h1>{{name}}</h1>
-  <p>Click to put a case, Wheel to Zoom</p>
-  <button class="reset">Reset</button>
-  <button class="start">Start</button><br/>
+  <p>Left click to put a case, right click to remove, Wheel to Zoom</p>
+  <button class="reset">Reset Map</button>
+  <button class="start">Start train</button><br/>
   <br/>
   <canvas width="900" height="400"></canvas><br/>
 </template>
