--- a/client/game/game.html
+++ b/client/game/game.html
@@ -1,8 +1,8 @@
 <template name="game">
   <h1>{{name}}</h1>
   <p>Left click to put a case, right click to remove, Wheel to Zoom</p>
-  <button class="reset">Reset Map</button>
-  <button class="start">Start train</button><br/>
+  <button class="ui primary button start">Start train</button><br/>
   <br/>
   <canvas width="900" height="400"></canvas><br/>
+  <button class="ui red button reset">Reset Map</button>
 </template>
