fix pan and mouse display

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -5,7 +5,7 @@
   <div class="ui buttons">
     <button class="ui positive button pup" data-content="Left click to put a rail, right click to remove">Edit</button>
     <div class="or"></div>
-    <button class="ui button pup" data-content="Pan the map with the mouse">Pan</button>
+    <button class="ui button pup" data-content="Pan the map with the mouse while holding the Ctrl key">Pan</button>
   </div>
   <br/>
   <br/>
