--- a/client/game/game.html
+++ b/client/game/game.html
@@ -3,10 +3,11 @@
   <button class="ui primary button start pup" data-content="It will start automatically in a later version :)">Start train</button>
   <button class="ui button center pup" data-content="Reset zoom and pan">Center Map</button>
   <div class="ui buttons">
-    <button class="ui positive button pup" data-content="Left click to put a rail, right click to remove">Edit</button>
+    <button class="ui button pup" data-content="Left click to put a rail, right click to remove">Edit</button>
     <div class="or"></div>
-    <button class="ui button pup" data-content="Pan the map with the mouse while holding the Ctrl key">Pan</button>
+    <button class="ui button pup" data-content="Pan the map with the mouse while holding the Ctrl key, or the middle button">Pan</button>
   </div>
+  {{railsCount}}
   <br/>
   <br/>
   <canvas width="900" height="400"></canvas><br/>
