--- a/client/game/game.html
+++ b/client/game/game.html
@@ -1,15 +1,22 @@
 <template name="game">
   <h1>{{name}}</h1>
-  <button class="ui primary button start pup" data-content="It will start automatically in a later version :)">Start train</button>
+  <button class="ui primary button start pup" data-content="It will start automatically in a later version :)">Start
+    train
+  </button>
   <button class="ui button center pup" data-content="Reset zoom and pan">Center Map</button>
-  <div class="ui buttons">
+  <br/>
+  <br/>
+  <canvas width="900" height="400"></canvas>
+  <br/>
+  <button class="right floated ui red button reset pup" data-content="Remove all rails">Reset Map</button>
+  <div class="mini ui buttons floated right">
+    <button class="ui positive button">Help</button>
     <button class="ui button pup" data-content="Left click to put a rail, right click to remove">Edit</button>
+    <button class="ui button pup" data-content="Use the mouse wheel to zoom">Zoom</button>
     <div class="or"></div>
-    <button class="ui button pup" data-content="Pan the map with the mouse while holding the Ctrl key, or the middle button">Pan</button>
+    <button class="ui button pup"
+            data-content="Pan the map with the mouse while holding the Ctrl key, or the middle button">Pan
+    </button>
   </div>
   {{railsCount}}
-  <br/>
-  <br/>
-  <canvas width="900" height="400"></canvas><br/>
-  <button class="ui red button reset pup" data-content="Remove all rails">Reset Map</button>
 </template>
