--- a/client/game/game.html
+++ b/client/game/game.html
@@ -6,7 +6,7 @@
   <button class="ui button center pup" data-content="Reset zoom and pan">Center Map</button>
   <br/>
   <br/>
-  <canvas width="900" height="400"></canvas>
+  <canvas width="{{screenWidth}}" height="{{screenHeigth}}"></canvas>
   <br/>
   <button class="right floated ui red button reset pup" data-content="Remove all rails">Reset Map</button>
   <div class="mini ui buttons floated right">
