login and list of online users

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -8,7 +8,9 @@
   <br/>
   <canvas width="{{screenWidth}}" height="{{screenHeigth}}"></canvas>
   <br/>
-  <button class="right floated ui red button reset pup" data-content="Remove all rails">Reset Map</button>
+  {{#if currentUser}}
+    <button class="right floated ui red button reset pup" data-content="Remove all rails">Reset Map</button>
+  {{/if}}
   <div class="mini ui buttons floated right">
     <button class="ui positive button">Help</button>
     <button class="ui button pup" data-content="Left click to put a rail, right click to remove">Edit</button>
