prices to tiles

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -7,12 +7,12 @@
   {{/if}}
   <button class="ui button center pup" data-content="Reset zoom and pan">Center Map</button>
 
-  <div class="ui icon top left pointing dropdown button">
+  <div class="ui icon top left pointing dropdown button tile-menu">
     <i class="road icon"></i>
     <div class="menu">
       <div class="header">Tile</div>
-      <div class="item"><i class="road icon"></i> Rails</div>
-      <div class="item"><i class="university icon"></i> Station</div>
+      <div class="item"><i class="road icon"></i><span class="description">1$</span> Rails</div>
+      <div class="item"><i class="university icon"></i><span class="description">150$</span>Station</div>
     </div>
   </div>
 
