favicon, site title, more help

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -25,7 +25,7 @@
     <button class="right floated ui red button reset pup" data-content="Remove all rails">Reset Map</button>
   {{/if}}
   <div class="mini ui buttons floated right">
-    <button class="ui positive button">Help</button>
+    <button class="ui positive button pup" data-content="Bon pour l'instant ya pas grand chose, mais c'est déjà marrant; Si vous avez une idée de gameplay ya un doc pour y mettre nos idées demandez-moi le lien ! MIck">Help</button>
     <button class="ui button pup" data-content="While logged, left click to put a rail, right click to remove">Edit</button>
     <button class="ui button pup" data-content="Use the mouse wheel to zoom">Zoom</button>
     <div class="or"></div>
