minor cosmestic changes, lobby files reorg

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -9,11 +9,12 @@
 
   <div class="ui icon top left pointing dropdown button tile-menu">
     <i class="road icon"></i>
+
     <div class="menu">
       <div class="header">Tile</div>
       {{#each tileTypes }}
         {{> tileType}}
-        {{/each }}
+      {{/each }}
     </div>
   </div>
 
@@ -26,17 +27,24 @@
     <button class="right floated ui red button reset pup" data-content="Remove all rails">Reset Map</button>
   {{/if}}
   <div class="mini ui buttons floated right">
-    <button class="ui positive button pup" data-content="Bon pour l'instant ya pas grand chose, mais c'est d&eacute;j&agrave; marrant; Si vous avez une id&eacute;e de gameplay ya un doc pour y mettre nos id&eacute;es demandez-moi le lien ! Mick">Help</button>
-    <button class="ui button pup" data-content="While logged, left click to put a rail, right click to remove">Edit</button>
+    <button class="ui positive button pup"
+            data-content="Bon pour l'instant ya pas grand chose, mais c'est d&eacute;j&agrave; marrant; Si vous avez une id&eacute;e de gameplay ya un doc pour y mettre nos id&eacute;es demandez-moi le lien ! Mick">
+      Help
+    </button>
+    <button class="ui button pup" data-content="While logged, left click to put a rail, right click to remove">Edit
+    </button>
     <button class="ui button pup" data-content="Use the mouse wheel to zoom">Zoom</button>
     <div class="or"></div>
     <button class="ui button pup"
             data-content="Pan the map with the mouse while holding the Ctrl key, or the middle button">Pan
     </button>
   </div>
-  Rails: {{railsCount}}
+  <div class="ui black label">
+    <i class="road icon"></i> Tiles
+    <div class="detail">{{railsCount}}</div>
+  </div>
 </template>
 
 <template name="tileType">
-  <div class="item selectTile"><i class="{{icon}} icon"></i><span class="description">{{price}}$</span> {{name}}</div>
+  <div class="item selectTile"><i class="{{icon}} icon"></i><span class="description"><span class="tiny ui red tag label">{{price}}$</span></span> {{name}}</div>
 </template>
