--- a/client/game/game.html
+++ b/client/game/game.html
@@ -15,7 +15,11 @@
       {{#each tileTypes }}
         {{> tileType}}
       {{/each }}
+      <div class="header">Skin</div>
+      <div class="item selectSkinDefault"><i class="road icon"></i> Rails</div>
+      <div class="item selectSkinCubes"><i class="square icon"></i> Cubes</div>
     </div>
+
   </div>
 
   Current speed: 45 km/h. 1 locomotive, 0 freight cars, 0 passenger cars
