1. bumping daydstats, 2. rails skins, 3. begun to work on game status, 4. stations

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -1,33 +1,42 @@
 <template name="game">
   <h1>{{name}}</h1>
-  {{#if currentUser}}
+
+  <p>{{gameStatus}}</p>
+
+
+
+  {{#if displayGameButtons}}
     <button class="ui primary button start pup" data-content="It will start automatically in a later version :)">Start
       train
     </button>
   {{/if}}
   <button class="ui button center pup" data-content="Reset zoom and pan">Center Map</button>
 
-  <div class="ui icon top left pointing dropdown button tile-menu">
-    <i class="road icon"></i>
+  {{#if displayGameButtons}}
 
-    <div class="menu">
-      <div class="header">Tile</div>
-      {{#each tileTypes }}
-        {{> tileType}}
-      {{/each }}
-      <div class="header">Skin</div>
-      <div class="item selectSkinDefault"><i class="road icon"></i> Rails</div>
-      <div class="item selectSkinCubes"><i class="square icon"></i> Cubes</div>
+    <div class="ui icon top left pointing dropdown button tile-menu">
+      <i class="road icon"></i>
+
+      <div class="menu">
+        <div class="header">Tile</div>
+        {{#each tileTypes }}
+          {{> tileType}}
+        {{/each }}
+        <div class="header">Skin</div>
+        <div class="item selectSkinDefault"><i class="road icon"></i> Default</div>
+        <div class="item selectSkinMine"><i class="road icon"></i> Mine</div>
+        <div class="item selectSkinCubes"><i class="square icon"></i> Cubes</div>
+      </div>
+
     </div>
 
-  </div>
-
-  Current speed: 45 km/h. 1 locomotive, 0 freight cars, 0 passenger cars
+    Current speed: 45 km/h. 1 locomotive, 0 freight cars, 0 passenger cars
+  {{/if}}
   <br/>
   <br/>
   <canvas width="{{screenWidth}}" height="{{screenHeigth}}"></canvas>
   <br/>
-  {{#if currentUser}}
+  {{#if displayGameButtons}}
     <button class="right floated ui red button reset pup" data-content="Remove all rails">Reset Map</button>
   {{/if}}
   <div class="mini ui buttons floated right">
@@ -50,5 +59,6 @@
 </template>
 
 <template name="tileType">
-  <div class="item selectTile"><i class="{{icon}} icon"></i><span class="description"><span class="tiny ui red tag label">{{price}}$</span></span> {{name}}</div>
+  <div class="item selectTile"><i class="{{icon}} icon"></i><span class="description"><span
+      class="tiny ui red tag label">{{price}}$</span></span> {{name}}</div>
 </template>
