join button fix

--- a/client/game/join.html
+++ b/client/game/join.html
@@ -1,5 +1,5 @@
 <template name="join">
-  <div class="ui basic modal">
+  <div class="ui modal join-modal">
     <i class="close icon"></i>
 
     <div class="header">
