New join window

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -26,7 +26,7 @@
 
   {{else}}
     {{#if currentUser }}
-      <button class="ui primary button join pup" data-content="Join a team or create a new one!">Join</button>
+      <button class="ui primary button open-join-modal pup" data-content="Join a team or create a new one!">Join</button>
       {{>join}}
     {{/if}}
   {{/if}}
