--- a/client/game/game.html
+++ b/client/game/game.html
@@ -26,8 +26,8 @@
 
   {{else}}
     {{#if currentUser }}
-      <button class="ui primary button open-join-modal pup" data-content="Join a team or create a new one!">Join</button>
-      {{>join}}
+      <button class="ui primary button open-join-modal pup" data-content="Display Teams">Teams</button>
+      {{>teams}}
     {{/if}}
   {{/if}}
   <br/>
