Migrating from legacy: fixing teams when no one has join a game yet (should not happen)

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -7,12 +7,12 @@
     {{{mapMessage}}}
   </div>
 
-  <button class="ui button center pup" data-content="Reset zoom and pan">Center Map</button>
-  <button class="ui primary button open-join-modal pup" data-content="Display Teams">Teams</button>
+  <button class="ui button center" >Center Map</button>
+  <button class="ui primary button open-join-modal">Teams</button>
   {{>teams}}
 
   {{#if displayGameButtons}}
-    <button class="ui primary button start pup" data-content="It will start automatically in a later version :)">Start
+    <button class="ui primary button start">Start
       train
     </button>
 
