--- a/client/game/teams.html
+++ b/client/game/teams.html
@@ -17,7 +17,7 @@
 
         <form class="ui form newteam">
           <div class="fields">
-            <input type="text" id="teamName">
+            <input type="text" id="teamName" placeholder="Name your team and press Enter">
           </div>
         </form>
       {{/if}}
