--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -23,7 +23,7 @@
 
   <br/>
   <br/>
-  <canvas width="{{screenWidth}}" height="{{screenHeigth}}"></canvas>
+  <canvas width="{{canvasWidth}}" height="{{canvasHeigth}}"></canvas>
   <br/>
   {{#if displayGameButtons}}
     <button class="right floated ui red button reset pup" data-content="Remove all rails">Reset Map</button>
