displaying train speed in km/h

--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -18,7 +18,7 @@
 
     {{>toolsDropdown}}
 
-    Current speed: 45 km/h. 1 locomotive, 0 freight cars, 0 passenger cars
+    Current speed: {{trainSpeed}} km/h. 1 locomotive, 0 freight cars, 0 passenger cars
   {{/if}}
 
   <br/>
