speed buttons (wip)

--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -18,7 +18,10 @@
 
     {{>toolsDropdown}}
 
-    Current speed: {{trainSpeed}} km/h. 1 locomotive, 0 freight cars, 0 passenger cars
+    Current speed: {{trainSpeed}} km/h
+    <button class="btn btn-default js-add-speed">+</button>
+    <button class="btn btn-default js-remove-speed">-</button>
+    1 locomotive, 0 freight cars, 0 passenger cars
   {{/if}}
 
   <br/>
