renaming Tiles to Points (2)

--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -53,13 +53,13 @@
 
 <template name="toolsDropdown">
 
-  <div class="ui icon top left pointing dropdown button tile-menu">
+  <div class="ui icon top left pointing dropdown button point-menu">
     <i class="road icon"></i>
 
     <div class="menu">
       <div class="header">Point</div>
-      {{#each tileTypes }}
-        {{> tileType}}
+      {{#each pointTypes }}
+        {{> pointType}}
       {{/each }}
       <div class="header">Skin</div>
       <div class="item selectSkinDefault"><i class="road icon"></i> Default</div>
@@ -70,7 +70,7 @@
 
 </template>
 
-<template name="tileType">
+<template name="pointType">
   <div class="item selectPoint"><i class="{{icon}} icon"></i><span class="description"><span
       class="tiny ui red tag label">{{price}}$</span></span> {{name}}</div>
 </template>
