--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -36,13 +36,15 @@
             data-content="Bon pour l'instant ya pas grand chose, mais c'est d&eacute;j&agrave; marrant; Si vous avez une id&eacute;e de gameplay ya un doc pour y mettre nos id&eacute;es demandez-moi le lien ! Mick">
       Help
     </button>
-    <button class="ui button pup" data-content="While logged, left click to put a rail, right click to remove">Edit
-    </button>
+    <button class="ui button pup" data-content="While logged, left click to put a rail, right click to remove">Edit</button>
     <button class="ui button pup" data-content="Use the mouse wheel to zoom">Zoom</button>
     <div class="or"></div>
     <button class="ui button pup"
             data-content="Pan the map with the mouse while holding the Ctrl key, or the middle button">Pan
     </button>
+  </div>
+  <div class="ui label js-toggle-volume clickable">
+    <i class="volume off icon"></i> Off
   </div>
   <div class="ui black label">
     <i class="road icon"></i> Paths
