--- a/client/ui/lobby/lobby.html
+++ b/client/ui/lobby/lobby.html
@@ -1,8 +1,16 @@
 <template name="lobby">
 
-    <div class="ui green inverted segment">Ya pas grand chose pour l'instant, vous pouvez creez un nouveau jeu et poser et
-      retirer des rails, faire se d&eacute;placer un train. Mais bient&ocirc;t ce jeu va hanter vos nuits. Voil&agrave;, rien de moins.
-    </div>
+  <div class="ui pathing menu">
+    <a class="item" href="/">Home</a>
+    {{#unless connected}}
+      <div class="ui active item" href="#">Connection issue...</div>
+    {{/unless}}
+    <div class="right menu"><a class="ui item">{{> loginButtons}}</a></div>
+  </div>
+
+  <div class="ui green inverted segment">Ya pas grand chose pour l'instant, vous pouvez creez un nouveau jeu et poser et
+    retirer des rails, faire se d&eacute;placer un train. Mais bient&ocirc;t ce jeu va hanter vos nuits. Voil&agrave;, rien de moins.
+  </div>
   <div class="ui three column grid">
     <div class="column">
       <div class="ui raised segment">
