removing paths, segments, etc...

--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -36,7 +36,7 @@
     <button class="ui button js-radio-previous-station">
       <i class="step backward icon"></i>
     </button>
-    <button class="ui button js-radio-toggle-volume pup" data-content="Stop radio">
+    <button class="ui button js-radio-toggle-volume pup" data-content="Radio">
       <i class="stop icon"></i>
     </button>
     <button class="ui button js-radio-next-station">
@@ -44,7 +44,7 @@
     </button>
   </div>
   <div class="ui black label">
-    <i class="road icon"></i> Paths
+    <i class="road icon"></i> Stations
     <div class="detail">{{railsCount}}</div>
   </div>
 
