--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -4,7 +4,7 @@
     {{{mapMessage}}}
   </div>
 
-  <button class="ui button center">Center Map</button>
+  <button class="ui button center">Center GameMap</button>
   <button class="ui primary button open-join-modal">Teams</button>
   {{>teams}}
 
@@ -18,7 +18,7 @@
   <canvas width="{{canvasWidth}}" height="{{canvasHeigth}}"></canvas>
   <br/>
   {{#if displayGameButtons}}
-    <button class="right floated ui red button js-reset pup" data-content="Remove all rails">Reset Map</button>
+    <button class="right floated ui red button js-reset pup" data-content="Remove all rails">Reset GameMap</button>
   {{/if}}
   <div class="mini ui buttons floated right">
     <button class="ui positive button pup"
