--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -9,9 +9,11 @@
   {{>teams}}
 
   {{#if displayGameButtons}}
-    Current speed: {{trainSpeed}} km/h
-    1 locomotive, 0 freight cars, 0 passenger cars
+    <div class="ui black label">Train speed: {{trainSpeed}} km/h</div>
   {{/if}}
+
+  <div class="ui red label">{{gameTime}}</div>
+  <div class="ui black label">{{clock}}</div>
 
   <br/>
   <br/>
@@ -45,7 +47,7 @@
   </div>
   <div class="ui black label">
     <i class="road icon"></i> Stations
-    <div class="detail">{{railsCount}}</div>
+    <div class="detail">{{stationCount}}</div>
   </div>
 
 </template>
