--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -4,6 +4,7 @@
     {{{mapMessage}}}
   </div>
 
+  <a href="/" class="ui button center">Home</a>
   <button class="ui button center">Center GameMap</button>
   <button class="ui primary button open-join-modal">Teams</button>
   {{>teams}}
