--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -1,6 +1,6 @@
 <template name="game">
   <div class="pull-right">
-    {{{gameStatus}}}
+    {{name}} : {{{gameStatus}}}
     {{{mapMessage}}}
   </div>
 
@@ -31,8 +31,7 @@
     <button class="ui button pup" data-content="While logged, left click to put a rail, right click to remove">Edit</button>
     <button class="ui button pup" data-content="Use the mouse wheel to zoom">Zoom</button>
     <div class="or"></div>
-    <button class="ui button pup"
-            data-content="Pan the map with the mouse while holding the Ctrl key, or the middle button">Pan
+    <button class="ui button pup" data-content="Pan the map with the mouse while holding the Ctrl key, or the middle button">Pan
     </button>
   </div>
   <div class="mini ui buttons floated right">
