--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -13,8 +13,8 @@
     <div class="ui black label">Train speed: {{trainSpeed}} km/h</div>
   {{/if}}
 
-  <div class="ui red label">{{gameTime}}</div>
-  <div class="ui black label">{{clock}}</div>
+  <div class="ui red label">Game Time: {{gameTime}}</div>
+  <div class="ui black label">Real Time: {{clock}}</div>
 
   <br/>
   <br/>
