--- a/client/ui/game/game.html
+++ b/client/ui/game/game.html
@@ -18,7 +18,7 @@
 
   <br/>
   <br/>
-  <canvas width="{{canvasWidth}}" height="{{canvasHeigth}}"></canvas>
+  <canvas width="{{canvasWidth}}" height="{{canvasHeight}}"></canvas>
   <br/>
   {{#if displayGameButtons}}
     <button class="right floated ui red button js-reset pup" data-content="Remove all rails">Reset GameMap</button>
